--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -16,12 +16,12 @@
 					<!-- /.panel-heading -->
 					<div class="panel-body">
 
-						<app-loading *ngIf="!message"></app-loading>
-						<div *ngIf="message" class="table-responsive">
+						<app-loading *ngIf="!action"></app-loading>
+						<div *ngIf="action" class="table-responsive">
 							<table class="table table-striped">
 								<tr>
 									<td>{{ 'TransactionId' | translate }}:</td>
-									<td><a routerLink="/transactions/{{message.transaction_id}}">{{message.transaction_id}}</a></td>
+									<td><a routerLink="/transactions/{{action.transaction_id}}">{{action.transaction_id}}</a></td>
 								</tr>
 								<tr>
 									<td>{{ 'MessageIndex' | translate }}:</td>
@@ -29,26 +29,26 @@
 								</tr>
 								<tr>
 									<td>{{ 'CreatedAt' | translate }}:</td>
-									<td>{{message.createdAt.sec * 1000 | date:'medium'}}</td>
+									<td>{{action.createdAt.sec * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'HandlerAccount' | translate }}:</td>
-									<td><a routerLink="/accounts/{{message.handler_account_name}}">{{message.handler_account_name}}</a></td>
+									<td><a routerLink="/accounts/{{action.handler_account_name}}">{{action.handler_account_name}}</a></td>
 								</tr>
 								<tr>
 									<td>{{ 'Type' | translate }}:</td>
-									<td>{{message.type}}</td>
+									<td>{{action.type}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'Authorization' | translate }}:</td>
 									<td>
-										<span *ngFor="let account of message.authorization">
+										<span *ngFor="let account of action.authorization">
 											<a routerLink="/accounts/{{account.account}}">{{account.account}}</a>
 										</span>
 									</td>
 								</tr>
 								<tr>
-									<td colspan="2"><prettyjson [obj]="message.data"> </prettyjson></td>
+									<td colspan="2"><prettyjson [obj]="action.data"> </prettyjson></td>
 								</tr>
 							</table>
 						</div>
