--- a/src/app/components/shared/page/navbar/navbar.component.html
+++ b/src/app/components/shared/page/navbar/navbar.component.html
@@ -5,5 +5,5 @@
 		<span class="icon-bar"></span>
 		<span class="icon-bar"></span>
 	</button>
-	<a class="navbar-brand" routerLink="/"><img src="/assets/logo.png" />{{ 'EOSTracker' | translate }}</a>
+	<a class="navbar-brand" routerLink="/"><img src="{{ logoUrl }}" />{{ appName | translate }}</a>
 </div>
