--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -29,7 +29,8 @@
 									<th>#</th>
 									<th>{{ 'BlockId' | translate }}</th>
 									<th>{{ 'CreatedAt' | translate }}</th>
-									<th>{{ 'Actions' | translate }}</th>
+									<th>{{ 'Status' | translate }}</th>
+									<th>{{ 'Type' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -37,7 +38,8 @@
 									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id|slice:0:32}}...</a></td>
 									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.block_id |slice:0:32}}...</a></td>
 									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
-									<td>{{transaction.messages.length}}</td>
+									<td>{{transaction.status}}</td>
+									<td>{{transaction.type}}</td>
 								</tr>
 								</tbody>
 							</table>
