--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -33,8 +33,8 @@
 			<li>
 				<a routerLink="/settings" routerLinkActive="active"><i class="fa fa-cogs fa-fw"></i> {{ 'Settings' | translate }}</a>
 			</li>
-			<li>
-				<a target="_blank" href="//walleteos.com"><i class="fa fa-credit-card fa-fw"></i> {{ 'Wallet' | translate }}</a>
+			<li *ngIf="walletUrl">
+				<a target="_blank" href="{{ walletUrl }}"><i class="fa fa-credit-card fa-fw"></i> {{ 'Wallet' | translate }}</a>
 			</li>
 		</ul>
 	</div>
