--- a/src/app/components/contract/contract.component.html
+++ b/src/app/components/contract/contract.component.html
@@ -24,7 +24,7 @@
 									<td><a routerLink="/transactions/{{action.transaction_id}}">{{action.transaction_id}}</a></td>
 								</tr>
 								<tr>
-									<td>{{ 'MessageIndex' | translate }}:</td>
+									<td>{{ 'ActionIndex' | translate }}:</td>
 									<td>{{action.action_id}}</td>
 								</tr>
 								<tr>
