fix tables dawn3

--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -80,10 +80,10 @@
 			<div class="panel panel-default" *ngFor="let table of tables">
 				<div class="panel-heading">
 					<h4 class="panel-title">
-						<a data-toggle="collapse" data-parent="#accordion2" href="#{{table.table_name}}" aria-expanded="false" class="collapsed">{{ 'Table' | translate }} - {{table.table_name}}</a>
+						<a data-toggle="collapse" data-parent="#accordion2" href="#{{table.name}}" aria-expanded="false" class="collapsed">{{ 'Table' | translate }} - {{table.name}}</a>
 					</h4>
 				</div>
-				<div id="{{table.table_name}}" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
+				<div id="{{table.name}}" class="panel-collapse collapse" aria-expanded="false" style="height: 0px;">
 					<div class="panel-body">
 						<div *ngFor="let row of table.rows">
 							<prettyjson [obj]="row"></prettyjson>
