--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -14,7 +14,7 @@
 						{{ 'Blocks' | translate }}
 
 						<div class="pull-right">
-							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+							<button *ngIf="page != 1" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
 							<button *ngIf="blocks && blocks.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
 						</div>
 
@@ -30,14 +30,18 @@
 									<th>{{ 'Timestamp' | translate }}</th>
 									<th>{{ 'Pending' | translate }}</th>
 									<th>{{ 'Producer' | translate }}</th>
+									<th>{{ 'Transactions' | translate }}</th>
+									<th>{{ 'Confirmations' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
 								<tr *ngFor="let block of blocks">
-									<td><a routerLink="/blocks/{{block.block_num}}">{{block.block_num}}</a></td>
-									<td>{{block.timestamp.sec * 1000 | date:'medium'}}</td>
-									<td>{{block.pending}}</td>
-									<td><a routerLink="/accounts/{{block.producer_account_id}}">{{block.producer_account_id}}</a></td>
+									<td><a routerLink="/blocks/{{block.blockNumber}}">{{block.blockNumber}}</a></td>
+									<td>{{block.timestamp * 1000 | date:'medium'}}</td>
+									<td>{{block.irreversible}}</td>
+									<td><a routerLink="/accounts/{{block.producer}}">{{block.producer}}</a></td>
+									<td>{{block.numTransactions}}</td>
+									<td>{{block.confirmed}}</td>
 								</tr>
 								</tbody>
 							</table>
