--- a/src/app/components/contracts/contracts.component.html
+++ b/src/app/components/contracts/contracts.component.html
@@ -26,8 +26,8 @@
               <table class="table table-striped">
                 <thead>
                 <tr>
+                  <th>{{ 'ActionId' | translate }}</th>
                   <th>{{ 'TransactionId' | translate }}</th>
-                  <th>{{ 'CreatedAt' | translate }}</th>
                   <th>{{ 'Authorization' | translate }}</th>
                   <th>{{ 'Handler' | translate }}</th>
                   <th>{{ 'Name' | translate }}</th>
@@ -35,14 +35,14 @@
                 </thead>
                 <tbody>
                 <tr *ngFor="let action of actions">
-                  <td><a routerLink="/actions/{{action.action_id}}/{{action.transaction_id}}">{{action.transaction_id}}</a></td>
-                  <td>{{action.createdAt.sec * 1000 | date:'medium'}}</td>
+                  <td><a routerLink="/actions/{{action.id}}">{{action.id|slice:0:32}}</a></td>
+                  <td><a routerLink="/transactions/{{action.transaction}}">{{action.transaction|slice:0:32}}</a></td>
                   <td>
                     <span *ngFor="let account of action.authorization">
                           <a routerLink="/accounts/{{account.actor}}">{{account.actor}}</a>
                     </span>
                   </td>
-                  <td><a routerLink="/accounts/{{action.handler_account_name}}">{{action.handler_account_name}}</a></td>
+                  <td><a routerLink="/accounts/{{action.account}}">{{action.account}}</a></td>
                   <td>{{action.name}}</td>
                 </tr>
                 </tbody>
