--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -36,6 +36,9 @@
 			<li *ngIf="walletUrl">
 				<a target="_blank" href="{{ walletUrl }}"><i class="fa fa-credit-card fa-fw"></i> {{ 'Wallet' | translate }}</a>
 			</li>
+			<li *ngIf="votingUrl">
+				<a target="_blank" href="{{ votingUrl }}"><i class="fa fa-credit-card fa-fw"></i> {{ 'Voting' | translate }}</a>
+			</li>
 		</ul>
 	</div>
 	<!-- /.sidebar-collapse -->
