--- a/src/app/components/shared/page/sidebar/sidebar.component.html
+++ b/src/app/components/shared/page/sidebar/sidebar.component.html
@@ -37,7 +37,7 @@
 				<a target="_blank" href="{{ walletUrl }}"><i class="fa fa-credit-card fa-fw"></i> {{ 'Wallet' | translate }}</a>
 			</li>
 			<li *ngIf="votingUrl">
-				<a target="_blank" href="{{ votingUrl }}"><i class="fa fa-credit-card fa-fw"></i> {{ 'Voting' | translate }}</a>
+				<a target="_blank" href="{{ votingUrl }}"><i class="fa fa-book fa-fw"></i> {{ 'Voting' | translate }}</a>
 			</li>
 		</ul>
 	</div>
