--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -20,27 +20,39 @@
 							<table class="table table-striped">
 								<tr>
 									<td>{{ 'Number' | translate }}:</td>
-									<td>{{block.block_num}}</td>
+									<td>{{block.blockNumber}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'Producer' | translate }}:</td>
-									<td><a routerLink="/accounts/{{block.producer_account_id}}">{{block.producer_account_id}}</a></td>
+									<td><a routerLink="/accounts/{{block.producer}}">{{block.producer}}</a></td>
 								</tr>
 								<tr>
 									<td>{{ 'Timestamp' | translate }}:</td>
-									<td>{{block.timestamp.sec * 1000 | date:'medium'}}</td>
+									<td>{{block.timestamp * 1000 | date:'medium'}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'BlockId' | translate }}:</td>
-									<td>{{block.block_id}}</td>
+									<td>{{block.id}}</td>
 								</tr>
 								<tr>
 									<td>{{ 'Previous' | translate }} {{ 'BlockInformation' | translate }}:</td>
-									<td><a routerLink="/search" [queryParams]="{q: block.prev_block_id}">{{block.prev_block_id}}</a></td>
+									<td><a routerLink="/search" [queryParams]="{q: block.prevBlockId}">{{block.prevBlockId}}</a></td>
 								</tr>
 								<tr>
 									<td>{{ 'Transaction' | translate }} {{ 'MerkleRoot' | translate }}:</td>
-									<td>{{block.transaction_merkle_root}}</td>
+									<td>{{block.transactionMerkleRoot}}</td>
+								</tr>
+								<tr>
+									<td>{{ 'Action' | translate }} {{ 'MerkleRoot' | translate }}:</td>
+									<td>{{block.actionMerkleRoot}}</td>
+								</tr>
+								<tr>
+									<td>{{ 'Transactions' | translate }}:</td>
+									<td>{{block.numTransactions}}</td>
+								</tr>
+								<tr>
+									<td>{{ 'Confirmations' | translate }}:</td>
+									<td>{{block.confirmed}}</td>
 								</tr>
 							</table>
 						</div>
@@ -67,14 +79,14 @@
 			</div>
 		</div>
 
-		<div class="row" *ngIf="block && block.transactions && block.transactions.length > 0">
+		<div class="row" *ngIf="block"> <!-- TODO: numTransactions is wrong?! -->
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						{{ 'Transactions' | translate }}
 
 						<div class="pull-right">
-							<button *ngIf="page != 0" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
+							<button *ngIf="page != 1" type="button" (click)="prevPage()" class="btn btn-outline btn-info btn-xs"><i class="fa fa-angle-left"> {{ 'Previous' | translate }}</i></button>
 							<button *ngIf="transactions && transactions.length == 30" type="button" (click)="nextPage()" class="btn btn-outline btn-info btn-xs">{{ 'Next' | translate }} <i class="fa fa-angle-right"></i></button>
 						</div>
 
@@ -94,10 +106,10 @@
 								</thead>
 								<tbody>
 								<tr *ngFor="let transaction of transactions">
-									<td><a routerLink="/transactions/{{transaction.transaction_id}}">{{transaction.transaction_id|slice:0:32}}...</a></td>
-									<td><a routerLink="/search" [queryParams]="{q: transaction.block_id}">{{transaction.block_id |slice:0:32}}...</a></td>
-									<td>{{transaction.createdAt.sec * 1000 | date:'medium'}}</td>
-									<td>{{transaction.messages.length}}</td>
+									<td><a routerLink="/transactions/{{transaction.id}}">{{transaction.id|slice:0:32}}...</a></td>
+									<td><a routerLink="/blocks/{{transaction.blockId}}">{{transaction.blockId}}</a></td>
+									<td>{{transaction.createdAt * 1000 | date:'medium'}}</td>
+									<td>{{transaction.numActions}}</td>
 								</tr>
 								</tbody>
 							</table>
