--- a/src/app/components/block/block.component.html
+++ b/src/app/components/block/block.component.html
@@ -79,7 +79,7 @@
 			</div>
 		</div>
 
-		<div class="row" *ngIf="block"> <!-- TODO: numTransactions is wrong?! -->
+		<div class="row" *ngIf="block && block.numTransactions > 0">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
 					<div class="panel-heading">
