--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -24,15 +24,7 @@
 								</tr>
 								<tr>
 									<td>{{ 'Balance' | translate }}:</td>
-									<td>{{account.eos_balance}}</td>
-								</tr>
-								<tr>
-									<td>{{ 'Staked' | translate }}:</td>
-									<td>{{account.staked_balance}}</td>
-								</tr>
-								<tr>
-									<td>{{ 'Unstaked' | translate }}:</td>
-									<td>{{account.unstaking_balance}}</td>
+									<td>{{balance}}</td>
 								</tr>
 
 								<tr>
