--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -23,6 +23,8 @@
 									<th>#</th>
 									<th>{{ 'Name' | translate }}</th>
 									<th>{{ 'Url' | translate }}</th>
+									<th>{{ 'Votes' | translate }}</th>
+									<th>{{ 'Daily Reward' | translate }}</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -30,6 +32,8 @@
 									<td>{{i + 1}}</td>
 									<td><a routerLink="/accounts/{{producer.owner}}">{{producer.owner}}</a></td>
                                     <td>{{producer.url}}</td>
+                                    <td>{{producer.votes}}<span *ngIf="producer.votes">%</span></td>
+                                    <td>{{producer.reward}} <span *ngIf="producer.reward">EOS</span></td>
 								</tr>
 								</tbody>
 							</table>
