--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -6,6 +6,17 @@
 			</div>
 			<!-- /.col-lg-12 -->
 		</div>
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="panel">
+					<div class="progress" style="height: 20px;">
+						<div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="15" [ngStyle]="{'width': chainPercentage + '%'}">Mainnet Voting Progress ({{ chainPercentage }}%)</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<!-- /.row -->
 		<div class="row">
 			<div class="col-lg-3 col-md-6">
