--- a/src/app/components/contracts/contracts.component.html
+++ b/src/app/components/contracts/contracts.component.html
@@ -27,7 +27,7 @@
                 <thead>
                 <tr>
                   <th>{{ 'ActionId' | translate }}</th>
-                  <th>{{ 'TransactionId' | translate }}</th>
+                  <th class="hidden-xs">{{ 'TransactionId' | translate }}</th>
                   <th>{{ 'Authorization' | translate }}</th>
                   <th>{{ 'Handler' | translate }}</th>
                   <th>{{ 'Name' | translate }}</th>
@@ -36,7 +36,7 @@
                 <tbody>
                 <tr *ngFor="let action of actions">
                   <td><a routerLink="/actions/{{action.id}}">{{action.id|slice:0:28}}...</a></td>
-                  <td><a routerLink="/transactions/{{action.transaction}}">{{action.transaction|slice:0:28}}...</a></td>
+                  <td class="hidden-xs"><a routerLink="/transactions/{{action.transaction}}">{{action.transaction|slice:0:28}}...</a></td>
                   <td>
                     <span *ngFor="let authorization of action.authorizations">
                           <a routerLink="/accounts/{{authorization.actor}}">{{authorization.actor}}</a> 
