--- a/src/app/components/transactions/transactions.component.html
+++ b/src/app/components/transactions/transactions.component.html
@@ -29,7 +29,7 @@
 									<th>#</th>
 									<th>{{ 'BlockId' | translate }}</th>
 									<th>{{ 'CreatedAt' | translate }}</th>
-									<th>{{ 'Expiration' | translate }}</th>
+									<th class="hidden-xs">{{ 'Expiration' | translate }}</th>
 									<th>{{ 'Actions' | translate }}</th>
 								</tr>
 								</thead>
@@ -38,7 +38,7 @@
 									<td><a routerLink="/transactions/{{transaction.id}}">{{transaction.id|slice:0:32}}...</a></td>
 									<td><a routerLink="/blocks/{{transaction.blockId}}">{{transaction.blockId}}</a></td>
 									<td>{{transaction.createdAt * 1000 | date:'medium'}}</td>
-									<td>{{transaction.expiration * 1000 | date:'medium'}}</td>
+									<td class="hidden-xs">{{transaction.expiration * 1000 | date:'medium'}}</td>
 									<td>{{transaction.numActions}}</td>
 								</tr>
 								</tbody>
