--- a/src/app/components/producers/producers.component.html
+++ b/src/app/components/producers/producers.component.html
@@ -29,8 +29,8 @@
 								</thead>
 								<tbody>
 								<tr *ngFor="let producer of producers; let i = index">
-									<td>{{i + 1}}</td>
-									<td><a routerLink="/accounts/{{producer.owner}}">{{producer.owner}}</a></td>
+									<td [ngClass]="{'bold': i < 21}">{{i + 1}}</td>
+									<td [ngClass]="{'bold': i < 21}" ><a routerLink="/producers/{{producer.owner}}">{{producer.owner}}</a></td>
                                     <td class="hidden-xs">{{producer.url}}</td>
                                     <td>{{producer.votes}}<span *ngIf="producer.votes">%</span></td>
                                     <td>{{producer.reward}} <span *ngIf="producer.reward">EOS</span></td>
