--- a/src/app/components/blocks/blocks.component.html
+++ b/src/app/components/blocks/blocks.component.html
@@ -39,7 +39,7 @@
 									<td><a routerLink="/blocks/{{block.blockNumber}}">{{block.blockNumber}}</a></td>
 									<td class="hidden-xs">{{block.timestamp * 1000 | date:'medium'}}</td>
 									<td>{{block.irreversible}}</td>
-									<td><a routerLink="/accounts/{{block.producer}}">{{block.producer}}</a></td>
+									<td><a routerLink="/producers/{{block.producer}}">{{block.producer}}</a></td>
 									<td>{{block.numTransactions}}</td>
 									<td>{{block.confirmed}}</td>
 								</tr>
